--- a/topografiya/templates/master.html
+++ b/topografiya/templates/master.html
@@ -190,7 +190,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a class="nav-link menu-title link-nav" href="../starter-kit/users.html"><i data-feather="users"></i><span>Ходимлар</span></a></li>
+                                <li class="dropdown"><a class="nav-link menu-title link-nav" href="{% url 'workers' %}"><i data-feather="users"></i><span>Ходимлар</span></a></li>
                             {% endif %}
 {#                            bu boshliq profili#}
 
