--- a/topografiya/templates/leader/workers.html
+++ b/topografiya/templates/leader/workers.html
@@ -17,8 +17,8 @@
                         <div class="col-sm-12">
                             <h3>Ходимлар</h3>
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="../starter-kit/index.html"><i class="fa fa-home f-20"></i></a></li>
-                                <li class="breadcrumb-item">Ходимлар</li>
+                                <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="fa fa-home f-20"></i></a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'workers' %}">Ходимлар</a></li>
                             </ol>
                         </div>
                     </div>
@@ -27,19 +27,35 @@
 
             <div class="container-fluid user-card">
                 <div class="row">
+
+                    {% for worker in workers %}
+
                     <div class="col-xl-6 col-md-6">
                         <div class="card shadow">
                             <div class="blog-box blog-list row m-20">
                                 <div class="col-xl-6 col-12">
-                                    <div class="media"><img class="img-80 rounded-circle" src="../assets/images/user/5.jpg">
+
+                                    <div class="media"><img class="img-80 rounded-circle" src="{% static 'assets/images/user/5.jpg' %}">
                                         <div class="media-body">
-                                            <p class="m-0 f-w-600">Aлешер Садийев</p>
-                                            <p class="m-0">Бўлим ҳисобчиси</p>
+                                            <p class="m-0 f-w-600">{{ worker.full_name}}</p>
+                                            <p class="m-0">{{ worker.position}}</p>
                                         </div>
                                     </div>
+
                                     <div class="row details m-t-10">
+
                                         <div class="col-8"><span>Татқиқот ишлар сони</span></div>
-                                        <div class="col-4 font-primary">30 </div>
+                                             <div class="col-4 font-primary">5</div>
+{#                                        {% for workerobject in workerobjects %}#}
+{#                                            {% if workerobject.status == 5 %}#}
+{#                                                <div class="col-4 font-primary">#}
+{#                                                    {% if forloop.last %}#}
+{#                                                            {{ forloop.last }}#}
+{#                                                    {% endif %}#}
+{#                                                </div>#}
+{#                                            {% endif %}#}
+{#                                        {% endfor %}#}
+
                                         <div class="col-8"> <span>Ҳозирда бажарилаётган ишлари</span></div>
                                         <div class="col-4 font-primary">2</div>
                                         <div class="col-8"> <span>Баҳоси</span></div>
@@ -50,7 +66,7 @@
                                     <div class="blog-details">
                                         <div class="blog-date"><span>01</span></div>
                                         <div class="blog-bottom-content">
-                                            <p class="mt-0">Ходим Aлешер Садийев Ҳозирги кунда дала назоратини тубдан бўшқариш лойиҳсида...</p>
+                                            <p class="mt-0">Ходим {{ worker.full_name }} Ҳозирги кунда дала назоратини тубдан бўшқариш лойиҳсида...</p>
                                         </div>
                                         <div class="project-status mt-4">
                                             <div class="media mb-0">
@@ -63,96 +79,15 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="../starter-kit/userveiw.html">
+                                <a href="#">
                                     <button class="btn btn-outline-primary w-100 m-t-15">Батавсил маълумот</button>
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-md-6">
-                        <div class="card shadow">
-                            <div class="blog-box blog-list row m-20">
-                                <div class="col-xl-6 col-12">
-                                    <div class="media"><img class="img-80 rounded-circle" src="../assets/images/user/3.jpg">
-                                        <div class="media-body">
-                                            <p class="m-0 f-w-600">Комилов Сардорбек</p>
-                                            <p class="m-0">Бўлим бўшлиғи</p>
-                                        </div>
-                                    </div>
-                                    <div class="row details m-t-10">
-                                        <div class="col-8"><span>Татқиқот ишлар сони</span></div>
-                                        <div class="col-4 font-primary">23 </div>
-                                        <div class="col-8"> <span>Ҳозирда бажарилаётган ишлари</span></div>
-                                        <div class="col-4 font-primary">5</div>
-                                        <div class="col-8"> <span>Баҳоси</span></div>
-                                        <div class="col-4 font-primary">80 балл</div>
-                                    </div>
-                                </div>
-                                <div class="col-xl-6 col-12">
-                                    <div class="blog-details">
-                                        <div class="blog-date"><span>02</span></div>
-                                        <div class="blog-bottom-content">
-                                            <p class="mt-0">Ходим Комилов Сардорбек Ҳозирги кунда дала назоратини тубдан бўшқариш лойиҳсида...</p>
-                                        </div>
-                                        <div class="project-status mt-4">
-                                            <div class="media mb-0">
-                                                <p class="m-0">65%</p>
-                                                <div class="media-body text-end"><span>Бажарилди</span></div>
-                                            </div>
-                                            <div class="progress" style="height: 5px">
-                                                <div class="progress-bar-animated bg-primary progress-bar-striped" role="progressbar" style="width: 70%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <a href="../starter-kit/userveiw.html">
-                                    <button class="btn btn-outline-primary w-100 m-t-15">Батавсил маълумот</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-6 col-md-6">
-                        <div class="card shadow">
-                            <div class="blog-box blog-list row m-20">
-                                <div class="col-xl-6 col-12">
-                                    <div class="media"><img class="img-80 rounded-circle" src="../assets/images/user/6.jpg">
-                                        <div class="media-body">
-                                            <p class="m-0 f-w-600">Исмоил Шукуров</p>
-                                            <p class="m-0">Бошлиқ ўринбосари</p>
-                                        </div>
-                                    </div>
-                                    <div class="row details m-t-10">
-                                        <div class="col-8"><span>Татқиқот ишлар сони</span></div>
-                                        <div class="col-4 font-primary">20 </div>
-                                        <div class="col-8"> <span>Ҳозирда бажарилаётган ишлари</span></div>
-                                        <div class="col-4 font-primary">1</div>
-                                        <div class="col-8"> <span>Баҳоси</span></div>
-                                        <div class="col-4 font-primary">90 балл</div>
-                                    </div>
-                                </div>
-                                <div class="col-xl-6 col-12">
-                                    <div class="blog-details">
-                                        <div class="blog-date"><span>03</span></div>
-                                        <div class="blog-bottom-content">
-                                            <p class="mt-0">Ходим Исмоил Шукуров Ҳозирги кунда дала назоратини тубдан бўшқариш лойиҳсида...</p>
-                                        </div>
-                                        <div class="project-status mt-4">
-                                            <div class="media mb-0">
-                                                <p class="m-0">65%</p>
-                                                <div class="media-body text-end"><span>Бажарилди</span></div>
-                                            </div>
-                                            <div class="progress" style="height: 5px">
-                                                <div class="progress-bar-animated bg-primary progress-bar-striped" role="progressbar" style="width: 70%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <a href="../starter-kit/userveiw.html">
-                                    <button class="btn btn-outline-primary w-100 m-t-15">Батавсил маълумот</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+
+                    {% endfor %}
+
                 </div>
             </div>
             <!-- Container-fluid Ends-->
