--- a/topografiya/templates/oogd_reporter/report/show_report.html
+++ b/topografiya/templates/oogd_reporter/report/show_report.html
@@ -162,182 +162,238 @@
             </div>
             <div class="modal-body">
 
-                <div class="row text-end">
+                       <div class="row text-end">
                     {% if order.type_of_sirie == '0' %}
-                    <div class="col-lg-6 m-b-10">
-                        <div class="m-b-10">
-                            <div>Разрешение на залет от МО РУз</div>
-                            <a href="/{{ siriefiles.file1_1 }}"> <i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
-                        </div>
-                    </div>
+                        {% if siriefiles.file1_1 %}
+                                <div class="col-lg-6 m-b-10">
+                                    <div class="m-b-10">
+                                        <div>Разрешение на залет от МО РУз</div>
+                                        <a href="/{{ siriefiles.file1_1 }}"> <i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                    </div>
+                                </div>
+                        {% endif %}
+                        {% if siriefiles.file1_2 %}
                     <div class="col-lg-6 m-b-10">
                         <div class="m-b-10">
                             <div>Схема планирования залета БПЛА<sup style="color: red;">*</sup></div>
                             <a  href="/{{ siriefiles.file1_2 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
+                            {% endif %}
+                        {% if siriefiles.file1_3 %}
                     <div class="col-lg-6 m-b-10">
                           <div class="m-b-10">
                             <div>Схема выполненных залетов<sup style="color: red;">*</sup></div>
                             <a href="/{{ siriefiles.file1_3 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
+                            {% endif %}
+                        {% if siriefiles.file1_4 %}
                     <div class="col-lg-6 m-b-10">
                         <div class='m-b-10'>
                             <div>Отчёт калибровки<sup style="color: red;">*</sup></div>
                             <a href="/{{ siriefiles.file1_4 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
+                            {% endif %}
+                        {% if siriefiles.file1_5 %}
                     <div class="col-lg-6 m-b-10">
                         <div class="m-b-10">
                             <div>Схема расположение опознаков и исходные пункты<sup style="color: red;">*</sup></div>
                             <a href="/{{ siriefiles.file1_5 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
+                            {% endif %}
+                        {% if siriefiles.file1_6 %}
                     <div class="col-lg-6 m-b-10">
                         <div class="m-b-10">
                             <div>Каталог координат исходных пунктов<sup style="color: red;">*</sup></div>
                             <a href="/{{ siriefiles.file1_6 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
+                            {% endif %}
+                        {% if siriefiles.file1_7 %}
                     <div class="col-lg-6 m-b-10">
                         <div class="m-b-10">
                             <div>Ведомость обследование пунктов<sup style="color: red;">*</sup></div>
                             <a href="/{{ siriefiles.file1_7 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
+                            {% endif %}
+                        {% if siriefiles.file1_8 %}
                     <div class="col-lg-6 m-b-10">
                          <div class="m-b-10">
                             <div>Кроки  исходных пунктов<sup style="color: red;">*</sup></div>
                             <a href="/{{ siriefiles.file1_8 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
+                            {% endif %}
+                        {% if siriefiles.file1_9 %}
                     <div class="col-lg-6 m-b-10">
                          <div class="m-b-10">
                             <div>Отчёт обработки ортофотоплана<sup style="color: red;">*</sup></div>
                             <a href="/{{ siriefiles.file1_9 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
+                            {% endif %}
+                        {% if siriefiles.file1_10 %}
                     <div class="col-lg-6 m-b-10">
                         <div class="m-b-10">
                             <div>Измерения, скаченные с прибора(БПЛА)<sup style="color: red;">*</sup></div>
                             <a href="/{{ siriefiles.file1_10 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
+                            {% endif %}
+                        {% if siriefiles.file1_11 %}
                     <div class="col-lg-6 m-b-10">
                         <div class="m-b-10">
                             <div>Фото. опознаков<sup style="color: red;">*</sup></div>
                             <a href="/{{ siriefiles.file1_11 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
+                            {% endif %}
                     {% endif %}
 
                     {% if order.type_of_sirie == '1' %}
+                        {% if siriefiles.file2_1 %}
                          <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Каталог координат исходных пунктов</div>
                                 <a href="/{{ siriefiles.file2_1 }}"> <i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                            {% endif %}
+                        {% if siriefiles.file2_2 %}
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Каталог кооодинат долговременных точек <sup style="color: red;">*</sup></div>
                                 <a  href="/{{ siriefiles.file2_2 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                            {% endif %}
+                        {% if siriefiles.file2_3 %}
                         <div class="col-lg-6 m-b-10">
                               <div class="m-b-10">
                                 <div>Ведомость обследование пунктов<sup style="color: red;">*</sup></div>
                                 <a href="/{{ siriefiles.file2_3 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                            {% endif %}
+                        {% if siriefiles.file2_4 %}
                         <div class="col-lg-6 m-b-10">
                             <div class='m-b-10'>
                                 <div>Отчёт калибровки<sup style="color: red;">*</sup></div>
                                 <a href="/{{ siriefiles.file2_4 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                            {% endif %}
+                        {% if siriefiles.file2_5 %}
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Кроки  исходных пунктов<sup style="color: red;">*</sup></div>
                                 <a href="/{{ siriefiles.file2_5 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                            {% endif %}
+                        {% if siriefiles.file2_6 %}
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Измерения, скаченные с прибора ( GNSS )<sup style="color: red;">*</sup></div>
                                 <a href="/{{ siriefiles.file2_6 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                            {% endif %}
+                        {% if siriefiles.file2_7 %}
                          <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Схема калибровки с границами объекта<sup style="color: red;">*</sup></div>
                                 <a href="/{{ siriefiles.file2_7 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                            {% endif %}
                     {% endif %}
 
                      {% if order.type_of_sirie == '2' %}
+                         {% if siriefiles.file3_1 %}
                          <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Ведомость обследования наличия и состояния пунктов геодезической сети на объекте</div>
                                 <a href="/{{ siriefiles.file3_1 }}"> <i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                             {% endif %}
+                         {% if siriefiles.file3_2 %}
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Каталог исходных пунктов и ранее заложенных точек <sup style="color: red;">*</sup></div>
                                 <a  href="/{{ siriefiles.file3_2 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                             {% endif %}
+                         {% if siriefiles.file3_3 %}
                         <div class="col-lg-6 m-b-10">
                               <div class="m-b-10">
                                 <div>Схема съемочного обоснования<sup style="color: red;">*</sup></div>
                                 <a href="/{{ siriefiles.file3_3 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                             {% endif %}
+                         {% if siriefiles.file3_4 %}
                         <div class="col-lg-6 m-b-10">
                             <div class='m-b-10'>
                                 <div>Хурналы нивелирования теодолитных ходов<sup style="color: red;">*</sup></div>
                                 <a href="/{{ siriefiles.file3_4 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                             {% endif %}
+                         {% if siriefiles.file3_5 %}
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Ведомость уравнивания теодолитных ходов и характеристики<sup style="color: red;">*</sup></div>
                                 <a href="/{{ siriefiles.file3_5 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                             {% endif %}
+                         {% if siriefiles.file3_6 %}
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Ведомость нивелирных ходов и характеристики<sup style="color: red;">*</sup></div>
                                 <a href="/{{ siriefiles.file3_6 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                             {% endif %}
+                         {% if siriefiles.file3_7 %}
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Схема уравнивания<sup style="color: red;">*</sup></div>
                                 <a href="/{{ siriefiles.file3_7 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                             {% endif %}
+                         {% if siriefiles.file3_8 %}
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Схема размещения объекта по планшетам<sup style="color: red;">*</sup></div>
                                 <a href="/{{ siriefiles.file3_8 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                             {% endif %}
+                         {% if siriefiles.file3_9 %}
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Каталог координат (пикеты)<sup style="color: red;">*</sup></div>
                                 <a href="/{{ siriefiles.file3_9 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                             {% endif %}
+                         {% if siriefiles.file3_10 %}
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Измерения, скаченные с прибора (тахеометра)<sup style="color: red;">*</sup></div>
                                 <a href="/{{ siriefiles.file3_10 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
+                             {% endif %}
                     {% endif %}
 
 
@@ -490,7 +546,16 @@
                                         <li class="file-box m-t-5">
                                             <div class="file-top"><i class="fa fa-file-pdf-o txt-primary"></i></div>
                                             <div class="file-bottom ">
-                                                <h6>11. Хисобот билан танишиш</h6>
+                                                <h6>11. Топографик-геодезик дастури</h6>
+                                                <p>Ознакомиться с файлом отправки</p>
+                                                <button class="btn btn-primary w-100 m-t-10">Кўриш</button>
+                                            </div>
+                                        </li>
+
+                                        <li class="file-box m-t-5">
+                                            <div class="file-top"><i class="fa fa-file-pdf-o txt-primary"></i></div>
+                                            <div class="file-bottom ">
+                                                <h6>12. Хисобот билан танишиш</h6>
                                                 <p>Ознакомиться с файлом отправки</p>
                                                 <button class="btn btn-primary w-100 m-t-10" data-bs-toggle="modal"
                                                     data-bs-target="#exampleModalCenter">Кўриш</button>
