--- a/topografiya/templates/master.html
+++ b/topografiya/templates/master.html
@@ -32,7 +32,11 @@
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/responsive.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/main.css' %}">
 
-
+    <style>
+        .active2{
+            background-color: #0dcaf0;
+        }
+    </style>
     {% block stylecontent %}
 
 	{% endblock stylecontent %}
@@ -133,11 +137,11 @@
             <nav>
                 <div class="main-navbar">
                     <div id="mainnav">
-                        <ul class="nav-menu custom-scrollbar">
+                        <ul class="nav-menu custom-scrollbar" id="myDIV">
                             <li class="back-btn">
                                 <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
                             </li>
-                           <li><a class="nav-link menu-title link-nav" href="{% url 'index' %}"><i data-feather="home"></i><span>Бош саҳифа</span></a></li>
+                           <li class="dropdown"><a class="nav-link menu-title link-nav" href="{% url 'index' %}"><i data-feather="home"></i><span>Бош саҳифа</span></a></li>
 
                              {% if user.profile.status == '1' %}
                                   <li class="dropdown">
@@ -195,7 +199,7 @@
 {#                            bu boshliq profili#}
 
                             {% if user.profile.status == '0' %}
-                                 <li>
+                                 <li class="dropdown">
                                     <a class="nav-link menu-title link-nav" href="{% url 'worker_new_works' %}">
                                         <i data-feather="file"></i>
 
@@ -277,7 +281,7 @@
 {#                            bu geodezis profili#}
 {#                                                bu oogd printer#}
                         {% if user.profile.status == '3' %}
-                            <li>
+                            <li class="dropdown">
                                     <a class="nav-link menu-title link-nav" href="{% url 'ogogd_printer_works' %}">
                                         <i  data-feather="printer"></i>
 
@@ -316,9 +320,9 @@
                             {% endif %}
                         {#                        bu oogd hisobot yozadigan#}
 
-                            <li class="dropdown"><a class="nav-link menu-title link-nav" href="#"><i data-feather="message-circle"></i><span>Хабарлар<span style="float: right" class="badge rounded-pill badge-danger">3</span></span></a></li>
+{#                            <li class="dropdown"><a class="nav-link menu-title link-nav" href="#"><i data-feather="message-circle"></i><span>Хабарлар<span style="float: right" class="badge rounded-pill badge-danger">3</span></span></a></li>#}
                             <li class="dropdown"><a class="nav-link menu-title link-nav" href="{% url 'history' %}"><i data-feather="arrow-down-circle"></i><span>Aрхив</span></a></li>
-                            <li class="dropdown"><a class="nav-link menu-title link-nav" href="../starter-kit/settings.html"><i data-feather="settings"></i><span>Созламалар</span></a></li>
+{#                            <li class="dropdown"><a class="nav-link menu-title link-nav" href="../starter-kit/settings.html"><i data-feather="settings"></i><span>Созламалар</span></a></li>#}
                             <li style="position: fixed;bottom: 10px;"><a  href="tel:+998711715658"><i data-feather="phone"></i> +998711715658</a></li>
                         </ul>
                     </div>
@@ -361,8 +365,17 @@
 <script src="{% static 'assets/js/select2/select2.full.min.js' %}"></script>
 <script src="{% static 'assets/js/select2/select2-custom.js' %}"></script>
 
-
-
+<script>
+$(".nav-link").click(function(){
+  // If this isn't already active
+  if (!$(this).hasClass("active2")) {
+    // Remove the class from anything that is active
+    $("a.active2").removeClass("active2");
+    // And make this active
+    $(this).addClass("active2");
+  }
+});
+</script>
 
     {% block scriptcontent %}
 
