--- a/topografiya/templates/master.html
+++ b/topografiya/templates/master.html
@@ -247,7 +247,7 @@
                                     <li>
                                         <a href="{% url 'program_works_geodezis' %}">Топографик-геодезик дастури
                                     {% if count.new_works_geodezis != 0 %}
-                                                <span style="margin-left: 15px" class="badge rounded-pill badge-danger">
+                                                <span style="float: right" class="badge rounded-pill badge-danger">
                                                      {{ count.new_works_geodezis }}
                                                 </span>
                                               {% endif %}
