--- a/topografiya/templates/leader/program_works/program_work_form_edit.html
+++ b/topografiya/templates/leader/program_works/program_work_form_edit.html
@@ -146,15 +146,15 @@
 {#                                               </div>#}
 
                                                <h4 class="text-center">ПРОГРАММА ТОПОГРАФО-ГЕОДЕЗИЧЕСКИХ РАБОТ</h4>
-                                               <p>По <span><input class="w-50 formact" name="a0" value="{{ form.a1_1 }}" required type="text" placeholder="наименование объекта, его местоположение"></span> </p>
+                                               <p>По <span><input class="w-50 formact" name="a0" value="{{ form.a0 }}" required type="text" placeholder="наименование объекта, его местоположение"></span> </p>
                                                <h5 class="text-center"><span class="badge rounded-pill badge-primary">1</span> ОБЩИЕ ДАННЫЕ</h5>
-                                               <p>
+                                             <p>
                                                    Основанием для производства работ послужило техническое задание, выданное
                                                    <span><input class="w-50 m-b-5 formact" required name="a1_1" value="{{ form.a1_1 }}" type="text"></span>
-                                                   Цель, назначение и объем проектируемых работ
-                                                   <span><input class="w-75 m-b-5 formact" required name="a1_2" value="{{ form.a1_2 }}" type="text"></span>
+                                                   <br>
+                                                   Цель, назначение и объем проектируемых работ<span><input class="m-b-5 formact" style="width: 70%" name="a1_2" value="{{ form.a1_2 }}" type="text"></span>
                                                    Дополнительные требования к выполнению геодезических работ
-                                                   <span><input class="w-75 m-b-5 formact" required name="a1_3" value="{{ form.a1_3 }}" type="text"></span>
+                                                   <span><input class="m-b-5 formact" required name="a1_3" value="{{ form.a1_3 }}" style="width: 55%" type="text"></span>
                                                </p>
                                                <div class="mb-3 row">
                                                    <label style="text-transform: lowercase;" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">2</span> КРАТКАЯ ФИЗИКО-ГЕОГРАФИЧЕСКАЯ ХАРАКТЕРИСТИКА РАЙОНА РАБОТ</label>
@@ -336,28 +336,75 @@
 
                                               <div class="floder_input">
                                                    <div class="row">
-                                                       <div style="font-size: 20px;"><span><i style="color: #168eea;font-size: 20px;" class="fa fa-file-pdf-o"></i></span>
-                                                           1. Копии задания на производство изысканий;
-                                                       </div>
-                                                       <div style="font-size: 20px;"><span><i style="color: #168eea;font-size: 20px;" class="fa fa-file-pdf-o"></i></span>
-                                                           2. Схема топографо-геодезической изученности района (участка) работ;
-                                                       </div>
-                                                       <div style="font-size: 20px;"><span><i style="color: #168eea;font-size: 20px;" class="fa fa-file-pdf-o"></i></span>
-                                                           3. Схема проектируемой опорной геодезической сети;
-                                                       </div>
-                                                       <div style="font-size: 20px;"><span><i style="color: #168eea;font-size: 20px;" class="fa fa-file-pdf-o"></i></span>
-                                                           4. Картограмма расположения участков топографической съемки;
-                                                       </div>
-                                                       <div style="font-size: 20px;"><span><i style="color: #168eea;font-size: 20px;" class="fa fa-file-pdf-o"></i></span>
-                                                           5. Чертежи специальных геодезических центров, если намечена их закладка;
-                                                       </div>
-                                                       <div style="font-size: 20px;"><span><i style="color: #168eea;font-size: 20px;" class="fa fa-file-pdf-o"></i></span>
-                                                           6. Топографические карты (планы) с указанием проектных вариантов трасс
-                                                       </div>
-                                                       <div style="font-size: 20px;"><span><i style="color: #168eea;font-size: 20px;" class="fa fa-file-pdf-o"></i></span>
-                                                           7. Схема линейных сооружений
-                                                       </div>
-                                                       <p>Примечание. Допускается совмещение прилагаемых схем и картограмм.</p>
+                                                       <div class="col-lg-7 mt-3" style="font-size: 18px">1. <a href="#"><i class="fa fa-file-pdf-o"></i>Копии задания на производство изысканий <sup class="text-danger">*</sup></a></div>
+                                                       {% if files.file1 %}
+{#                                                       <div class="col-lg-3 mt-3"><input class="form-control" name="file1" id="file1" type="file"></div>#}
+                                                       <div class="col-lg-5 mt-3 text-center"><a href="/{{ files.file1 }}" class="btn btn-success"> <i class="fa fa-check text-white"></i> Файл билан танишиш</a></div>
+{#                                                           {% else %}#}
+{#                                                            <div class="col-lg-6 mt-3"><input class="form-control" required name="file1" id="file1" type="file"></div>#}
+                                                           {% endif %}
+
+
+                                                       <div class="col-lg-7 mt-3" style="font-size: 18px">2. <a href="#"><i class="fa fa-file-pdf-o"></i> Схема топографо-геодезической изученности района (участка) работ</a></div>
+                                                        {% if files.file2 %}
+{#                                                       <div class="col-lg-3 mt-3"><input class="form-control" name="file2" id="file2" type="file"></div>#}
+                                                       <div class="col-lg-5 mt-3 text-center"><a href="/{{ files.file2 }}" class="btn btn-success"> <i class="fa fa-check text-white"></i> Файл билан танишиш</a></div>
+{#                                                           {% else %}#}
+{#                                                             <div class="col-lg-6 mt-3"><input class="form-control" name="file2" id="file2" type="file"></div>#}
+                                                           {% endif %}
+
+
+
+                                                       <div class="col-lg-7 mt-3" style="font-size: 18px">3. <a href="#"><i class="fa fa-file-pdf-o"></i> Схема проектируемой опорной геодезической сети</a></div>
+                                                        {% if files.file3 %}
+{#                                                        <div class="col-lg-3 mt-3"><input class="form-control" name="file3" id="file3" type="file"></div>#}
+                                                       <div class="col-lg-5 mt-3 text-center"><a href="/{{ files.file3 }}" class="btn btn-success"> <i class="fa fa-check text-white"></i> Файл билан танишиш</a></div>
+{#                                                           {% else %}#}
+{#                                                             <div class="col-lg-6 mt-3"><input class="form-control" name="file3" id="file3" type="file"></div>#}
+                                                           {% endif %}
+
+
+                                                       <div class="col-lg-7 mt-3" style="font-size: 18px">4. <a href="#"><i class="fa fa-file-pdf-o"></i> Картограмма расположения участков топографической съемки</a></div>
+                                                        {% if files.file4 %}
+{#                                                        <div class="col-lg-3 mt-3"><input class="form-control" name="file4" id="file4" type="file"></div>#}
+                                                       <div class="col-lg-5 mt-3 text-center"><a href="/{{ files.file4 }}" class="btn btn-success"> <i class="fa fa-check text-white"></i> Файл билан танишиш</a></div>
+{#                                                           {% else %}#}
+{#                                                            <div class="col-lg-6 mt-3"><input class="form-control" name="file4" id="file4" type="file"></div>#}
+                                                           {% endif %}
+
+
+
+                                                       <div class="col-lg-7 mt-3" style="font-size: 18px">5. <a href="#"><i class="fa fa-file-pdf-o"></i> Чертежи специальных геодезических центров, если намечена их закладка</a></div>
+                                                       {% if files.file5 %}
+{#                                                       <div class="col-lg-3 mt-3"><input class="form-control" name="file5" id="file5" type="file"></div>#}
+                                                       <div class="col-lg-5 mt-3 text-center"><a href="/{{ files.file5 }}" class="btn btn-success"> <i class="fa fa-check text-white"></i> Файл билан танишиш</a></div>
+{#                                                           {% else %}#}
+{#                                                            <div class="col-lg-6 mt-3"><input class="form-control" name="file5" id="file5" type="file"></div>#}
+                                                           {% endif %}
+
+
+
+                                                       <div class="col-lg-7 mt-3" style="font-size: 18px">6. <a href="#"><i class="fa fa-file-pdf-o"></i> Топографические карты (планы) с указанием проектных вариантов трасс</a></div>
+                                                        {% if files.file6 %}
+{#                                                       <div class="col-lg-3 mt-3"><input class="form-control" name="file6" id="file6" type="file"></div>#}
+                                                       <div class="col-lg-5 mt-3 text-center"><a href="/{{ files.file6 }}" class="btn btn-success"> <i class="fa fa-check text-white"></i> Файл билан танишиш</a></div>
+{#                                                           {% else %}#}
+{#                                                           <div class="col-lg-6 mt-3"><input class="form-control" name="file6" id="file6" type="file"></div>#}
+                                                           {% endif %}
+
+
+
+                                                       <div class="col-lg-7 mt-3" style="font-size: 18px">7. <a href="#"><i class="fa fa-file-pdf-o"></i> Схема линейных сооружений</a></div>
+                                                        {% if files.file7 %}
+{#                                                       <div class="col-lg-3 mt-3"><input class="form-control" name="file7" id="file7" type="file"></div>#}
+                                                       <div class="col-lg-5 mt-3 text-center"><a href="/{{ files.file7 }}" class="btn btn-success"> <i class="fa fa-check text-white"></i> Файл билан танишиш</a></div>
+{#                                                           {% else %}#}
+{#                                                           <div class="col-lg-6 mt-3"><input class="form-control" name="file7" id="file7" type="file"></div>#}
+                                                           {% endif %}
+
+
+
+                                                       <h5 class="m-t-15">Примечание. <i>Допускается совмещение прилагаемых схем и картограмм.</i></h5>
                                                    </div>
                                                </div>
 
@@ -368,10 +415,10 @@
                                                    </div>
                                                </div>
 
-                                               {% if form.programwork.status == 2 %}
+{#                                               {% if form.programwork.status == 2 %}#}
 {#                                                    <input type="text" value="{{ object.id }}" name="object_id" style="display:none;">#}
-                                                    <button type="submit" class="float-end btn btn-primary ">Қайта текширувга юбориш</button>
-                                              {% endif %}
+{#                                                    <button type="submit" class="float-end btn btn-primary ">Қайта текширувга юбориш</button>#}
+{#                                              {% endif %}#}
 
                                           </form>
                                       </div>
