--- a/topografiya/templates/leader/program_works/program_works.html
+++ b/topografiya/templates/leader/program_works/program_works.html
@@ -94,7 +94,7 @@
                                                                         </div>
                                                                         <hr>
                                                                         <div class="detail-footer">
-                                                                            <a href="{% url 'program_work_form_edit' id=object.id %}">
+                                                                            <a href="{% url 'program_work_form_edit' id=object.object.id %}">
                                                                                 <button class="btn btn-square btn-outline-primary-2x">
                                                                                     Батафсил маълумот
                                                                                 </button>
@@ -132,9 +132,7 @@
 
                                                                 {% for work in rejecteds %}
                                                                     {% if work.programowork.object.id == object.object.id %}
-                                                                        {% if forloop.last %}
-                                                                                {{ forloop.counter }}
-                                                                            {% endif %}
+                                                                        <b  class="count" data-all="{{ work.programowork.object.id }},"></b>
                                                                     {% endif %}
                                                                 {% endfor %}
 
@@ -143,7 +141,7 @@
                                                         <hr>
 
                                                          <div class="detail-footer">
-                                                             <a href="{% url 'program_work_form_edit' id=object.object.id %}">
+                                                             <a href="{% url 'program_work_form_re_sent_to_check' id=object.object.id %}">
                                                                  <button class="btn btn-square btn-primary w-100">
                                                                      Батафсил
                                                                  </button>
@@ -252,5 +250,22 @@
             </div>
 
         </div>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+$('.count').each(function(i,obj){
+    let text=$(this).attr('data-all');
+    num=text.split(',');
+    let s=0;
+    for(let i in num){
+    if(num[i]!='')
+      s++;
+      }
+        $(this).text(s);
+    });
+  });
+
+</script>
 
 {% endblock %}
